more-page-downwards

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
 <div class="pic">
         <img src= "assets\img\bread-top.jpg" width= "1371" height="410" alt= "profile picture" />
-    
-
-
 </div>
 
 
@@ -30,7 +27,23 @@
 
 </div>
 
-   
+<div class="second">
+    <div class="statement">
+        <p id="sta">Real happiness is sharing delicious, freshly backed goods with <br>
+        those you care about. Pastisserie Sweety has it all, and  our entire <br>
+    menu is either backed or cooked daily.</p>
+    <p id="sta">Image from Freepik</p>
+    </div>
+    <div id="fimage">
+        <img src= "assets\img\pie.jpg" width= "350" height="320" alt= "profile picture" />
+    </div>
+    <div id="simage">
+        <img src= "assets\img\c-t.jpg" width= "350" height="320" alt= "profile picture" />
+    </div>
+    <div id="timage">
+        <img src= "assets\img\b-p.jpg" width= "350" height="320" alt= "profile picture" />
+    </div>
+</div>
 
     
 
