--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
     </div>
 </div>
 
-    
+<div class="returnn">
+    <a href="https://louis01louis.github.io/WD-Finals/pages/works/index.html">Back to Finals</a>
+</div>
 
 </body>
 
 
 
 
-
-<!-- References: 
-    www.w3schools.com
---> 
 </html>
